--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -1,9 +1,9 @@
 .sidebar {
   flex: 3;
-  height: calc(100vh - 50px);
+  height: 100vh;
   overflow-y: scroll;
   position: sticky;
-  top: 50px;
+  top: 0;
 }
 
 ::-webkit-scrollbar {
