--- a/src/components/topbar/Topbar.module.css
+++ b/src/components/topbar/Topbar.module.css
@@ -4,7 +4,7 @@
   background-color: #1877f2;
   display: flex;
   align-items: center;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 999;
 }
