--- a/src/components/feed/Feed.module.css
+++ b/src/components/feed/Feed.module.css
@@ -1,5 +1,5 @@
 .feed {
-  flex: 5.5;
+  flex: 7.5;
 }
 
 .feedWrapper {
@@ -8,10 +8,9 @@
 
 .share {
   width: 100%;
-  height: 170px;
   border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
-  box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  box-shadow: rgba(50, 80, 250, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .shareWrapper {
@@ -29,6 +28,14 @@
   border-radius: 50%;
   object-fit: cover;
   margin-right: 10px;
+  padding: 10px;
+  transition: all 0.4s;
+}
+
+.shareProfileImg:hover {
+  transform: scale(1.2);
+  background-color: #999;
+  color: white;
 }
 
 .shareInput {
@@ -81,4 +88,13 @@
   margin-right: 20px;
   cursor: pointer;
   color: white;
+  transition: all 0.4s;
+}
+
+.shareButton:hover {
+  background-color: rgb(25, 174, 25);
+}
+
+.postList {
+  padding: 0 20px 0 20px;
 }
