--- a/src/components/post/Post.module.css
+++ b/src/components/post/Post.module.css
@@ -1,5 +1,6 @@
 .post {
   width: 100%;
+  max-width: 100%;
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
@@ -8,6 +9,7 @@
 
 .postWrapper {
   padding: 10px;
+  overflow: hidden;
 }
 
 .postTop {
@@ -26,6 +28,11 @@
   height: 32px;
   border-radius: 50%;
   object-fit: cover;
+  transition: all 0.4s;
+}
+
+.postProfileImg:hover {
+  transform: scale(1.3);
 }
 
 .postUsername {
@@ -47,6 +54,11 @@
   width: 100%;
   max-height: 500px;
   object-fit: contain;
+  transition: all 0.4s;
+}
+
+.postImg:hover {
+  transform: scale(1.05);
 }
 
 .postBottom {
@@ -89,7 +101,11 @@
 .smallLike {
   width: 24px;
   height: 24px;
-  transition: all 0.3s;
   margin-right: 5px;
   cursor: pointer;
+  transition: all 0.4s;
+}
+
+.smallLike:hover {
+  transform: translateY(-5px);
 }
