--- a/src/components/online/Online.module.css
+++ b/src/components/online/Online.module.css
@@ -14,6 +14,11 @@
   height: 40px;
   border-radius: 50%;
   object-fit: cover;
+  transition: all 0.4s;
+}
+
+.rightbarProfileImg:hover {
+  transform: scale(1.15);
 }
 
 .rightbarOnline {
