Add comments modal

--- a/src/components/addFriends/AddFriends.module.css
+++ b/src/components/addFriends/AddFriends.module.css
@@ -1,7 +1,9 @@
+@import '../../index.css';
+
 .followList {
-  background-color: #3b5998;
-  color: #ffffff;
-  height: 0;
+  background-color: var(--primary-color);
+  color: var(--light);
+  height: 24px;
   text-align: center;
 }
 
@@ -9,7 +11,7 @@
 .hideListButton {
   background-color: transparent;
   border: none;
-  color: #ffffff;
+  color: var(--light);
   font-size: 16px;
   cursor: pointer;
   border-radius: 50%;
@@ -17,13 +19,13 @@
 }
 
 .hideListButton {
-  color: black;
+  color: var(--dark);
 }
 
 .showListButton:hover,
 .hideListButton:hover {
-  color: rgb(64, 212, 64);
-  transform: scale(1.4);
+  color: var(--tertiary-color);
+  transform: scale(1.3);
 }
 
 .peopleList {
@@ -32,7 +34,7 @@
   padding: 0;
   max-height: 400px;
   overflow-y: auto;
-  background-color: #3b5998;
+  background-color: var(--primary-color-dark);
   border-radius: 3%;
   margin-top: 18px;
 }
@@ -58,7 +60,7 @@
 .unfollowButton {
   background-color: transparent;
   border: none;
-  color: #18f297;
+  color: var(--tertiary-color);
   font-size: 16px;
   cursor: pointer;
   transition: all 0.4s;
@@ -66,7 +68,7 @@
 
 .followButton:hover,
 .unfollowButton:hover {
-  color: #19b172;
+  color: var(--tertiary-color-dark);
 }
 
 .peopleInfo {
@@ -80,5 +82,5 @@
   font-size: 12px;
   font-weight: 300;
   font-style: italic;
-  color: paleturquoise;
+  color: var(--secondary-color);
 }
