--- a/src/components/closeFriend/CloseFriend.module.css
+++ b/src/components/closeFriend/CloseFriend.module.css
@@ -1,7 +1,15 @@
+@import '../../index.css';
+
 .sidebarFriend {
   display: flex;
   align-items: center;
   margin-bottom: 15px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.sidebarFriend:hover {
+  color: var(--tertiary-color);
 }
 
 .sidebarFriendImg {
@@ -10,4 +18,9 @@
   border-radius: 50%;
   object-fit: cover;
   margin-right: 10px;
+  transition: all 0.4s;
+}
+
+.sidebarFriendImg:hover {
+  transform: scale(1.2);
 }
