--- a/src/components/post/Post.module.css
+++ b/src/components/post/Post.module.css
@@ -1,3 +1,5 @@
+@import '../../index.css';
+
 .post {
   width: 100%;
   max-width: 100%;
@@ -85,7 +87,7 @@
 
 .postCommentText {
   cursor: pointer;
-  border-bottom: 1px dashed gray;
+  border-bottom: 1px dashed var(--grey);
   font-size: 15px;
 }
 
