--- a/src/components/rightbar/Rightbar.module.css
+++ b/src/components/rightbar/Rightbar.module.css
@@ -1,3 +1,5 @@
+@import '../../index.css';
+
 .rightbar {
   flex: 2.5;
 }
@@ -68,7 +70,7 @@
 .rightbarInfoKey {
   font-weight: 500;
   margin-right: 15px;
-  color: #555;
+  color: var(--grey);
 }
 
 .rightbarInfoValues {
