--- a/src/components/sidebar/Sidebar.module.css
+++ b/src/components/sidebar/Sidebar.module.css
@@ -1,3 +1,5 @@
+@import '../../index.css';
+
 .sidebar {
   flex: 2;
   height: 100vh;
@@ -11,11 +13,15 @@
 }
 
 ::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
+  background-color: var(--grey);
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: rgb(193, 191, 191);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgb(131, 131, 131);
 }
 
 .sidebarWrapper {
@@ -26,12 +32,24 @@
   padding: 0;
   margin: 0;
   list-style: none;
+  /* display: flex;
+  flex-direction: column;
+  flex-wrap: wrap; */
 }
 
 .sidebarListItem {
   display: flex;
+  /* flex-direction: column; */
+  /* flex-wrap: wrap; */
+  /* justify-content: start; */
   align-items: center;
   margin-bottom: 20px;
+  cursor: pointer;
+  transition: all 0.4s;
+}
+
+.sidebarListItem:hover {
+  color: var(--secondary-color-dark);
 }
 
 .sidebarIcon {
@@ -45,6 +63,13 @@
   border-radius: 5px;
   font-weight: 500;
   cursor: pointer;
+  transition: all 0.4s;
+}
+
+.sidebarButton:hover {
+  background-color: var(--tertiary-color);
+  color: var(--light);
+  transform: scale(1.05);
 }
 
 .sidebarHr {
@@ -52,6 +77,8 @@
 }
 
 .sidebarFriendList {
+  display: flex;
+  flex-direction: column;
   padding: 0;
   margin: 0;
   list-style: none;
