--- a/src/pages/login/Login.module.css
+++ b/src/pages/login/Login.module.css
@@ -1,3 +1,5 @@
+@import '../../index.css';
+
 .login {
   display: flex;
   align-items: center;
@@ -5,13 +7,15 @@
   flex-direction: column;
   gap: 20px;
   height: 100vh;
-  background-color: #f8f9fd;
+  background-color: var(--light);
 }
 
 .loginInput {
-  height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.2);
+  height: 50px;
+  border-radius: 10px;
+  border: 1px solid var(--grey);
   font-size: 18px;
+  padding-left: 20px;
 }
 
 .loginInput:focus {
@@ -19,45 +23,43 @@
 }
 
 .loginBtn {
-  margin-top: 10px;
-  cursor: pointer;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  background-color: var(--primary-color);
+  color: var(--light);
   font-size: 20px;
-  background-color: #1775ee;
-  border: 1px solid #1775ee;
-  color: #fff;
-  padding: 10px 20px;
-  border-radius: 10%;
-  transition: all 0.4s;
-  width: 50%;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s;
+  margin-top: 50px;
 }
 
 .loginBtn:hover {
-  transform: rotate(7deg);
-  background-color: #031d3f;
-  border: 1px solid #fff;
-  border-bottom-right-radius: 50%;
+  background-color: var(--primary-color-dark);
 }
 
 .loginRegisterButton {
-  text-decoration: none;
-  width: 35%;
-  text-align: center;
-  background-color: #42b72a;
-  margin-top: 10px;
-  cursor: pointer;
+  display: block;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  background-color: var(--tertiary-color);
+  color: var(--light);
   font-size: 20px;
-  border: 1px solid #42b72a;
-  color: #fff;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s;
+  text-decoration: none;
+  text-align: center;
   padding: 10px 20px;
-  border-radius: 10%;
-  transition: all 0.4s;
 }
 
 .loginRegisterButton:hover {
-  transform: rotate(-7deg);
-  background-color: #216d11;
-  border: 1px solid #fff;
-  border-bottom-left-radius: 50%;
+  background-color: var(--tertiary-color-dark);
+  color: var(--light);
 }
 
 .forgot {
@@ -65,14 +67,14 @@
   cursor: pointer;
   font-size: 16px;
   font-weight: 500;
-  color: darkorange;
+  color: var(--secondary-color);
   transition: all 0.3s;
   width: 100%;
   text-align: center;
 }
 
 .forgot:hover {
-  color: darkblue;
+  color: var(--secondary-color-dark);
 }
 
 .buttonContainer {
@@ -80,12 +82,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
 }
 
 .loginForm {
-  background-color: white;
+  background-color: var(--grey);
   padding: 2rem;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 10px;
 }
 
 .listContainer {
@@ -116,12 +119,12 @@
   font-size: 50px;
   margin-left: 20px;
   font-weight: bold;
-  color: #1775ee;
+  color: var(--primary-color);
 }
 
 .loginNow {
   font-size: 24px;
-  background-color: #1775ee;
+  background-color: var(--primary-color);
   color: #fff;
   border-radius: 10%;
   padding: 10px 20px;
@@ -130,5 +133,5 @@
 }
 
 .loginNow:hover {
-  background-color: #031d3f;
+  background-color: var(--primary-color-dark);
 }
