--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -1,3 +1,5 @@
+@import '../../index.css';
+
 .profile {
   display: flex;
 }
@@ -27,7 +29,7 @@
   right: 0;
   margin: auto;
   top: 150px;
-  border: 3px solid white;
+  border: 3px solid var(--light);
 }
 
 .profileInfo {
