--- a/src/pages/profile/Profile.module.css
+++ b/src/pages/profile/Profile.module.css
@@ -30,6 +30,12 @@
   margin: auto;
   top: 150px;
   border: 3px solid var(--light);
+  transition: all 0.4s;
+}
+
+.profileUserImg:hover {
+  border: 6px solid var(--primary-color);
+  transform: scale(1.2);
 }
 
 .profileInfo {
