--- a/src/components/feed/Feed.module.css
+++ b/src/components/feed/Feed.module.css
@@ -108,3 +108,19 @@
     padding: 4px;
   }
 }
+
+@media screen and (max-width: 480px) {
+  .shareInput {
+    font-size: 12px;
+  }
+
+  .shareProfileImg {
+    width: 40px;
+    height: 40px;
+    margin: 0;
+  }
+
+  .shareButton {
+    margin: 0;
+  }
+}
