--- a/src/components/addFriends/AddFriends.module.css
+++ b/src/components/addFriends/AddFriends.module.css
@@ -84,3 +84,23 @@
   font-style: italic;
   color: var(--secondary-color);
 }
+
+@media screen and (max-width: 540px) {
+  .person {
+    padding: 2px;
+  }
+
+  .name {
+    margin-left: 0;
+    font-size: 12px;
+  }
+
+  .peopleInfo {
+    margin: 0;
+  }
+
+  .followButton,
+  .unfollowButton {
+    font-size: 12px;
+  }
+}
